+ Added atkPageBuilder (can be instantiated using $node->createPageBuilder())
  which provides a fluent interface for building generalized ATK pages.
  [Peter]
+ Added support for different node lock modes (exclusive and shared). [Peter]
+ Added atkDateFormat function which can be used to do localized formatting
  of a time stamp, compatible with PHP's date function. [Peter]
* Did some housekeeping and removed the use of some unidentified variables
  [mvdvelden]
* Upgraded Prototype to 1.6.0.2, Scriptaculous to 1.8.1 and Window.js to
  1.3.2. Might cause certain backwards incompatiblities! [Peter]
* Admin datagrids can now be modified from within the node by implementing 
  the modifyDataGrid($grid) method. [Peter]
* One-to-many relation datagrid can now be modified by implementing the
  modifyDataGrid($grid) method inside the destination node or by
  implementing an <attribute>_modifyDataGrid($grid) method inside the
  owner node. [Peter]
* The default datagrid template now reserves space for components named top
  or bottom, which makes it easy to add your own custom components 
  without having the need to create a custom template. [Peter]
* Multi-record-action modes MRA_SINGLE_SELECT and MRA_NO_SELECT 
  are now properly supported by the datagrid. [Peter]
* atkMetaPolicy's remove method now takes multiple arguments. [Peter]
* Extendable shuttle relation filters are now taken into account when
  initlally  rendering the shuttle. [Peter]
* Did some internal refactoring on the atkDateAttribute draw method.[Martijn]
* Fixed pda format in atkDateAttribute. [Martijn]
* Improved page title support which makes it possible to set the title of
  the page from within an action. [Peter]
* Added a display method to the atkprofileattribute, it will now list the
  rights that a user has per node and module. [Erik]
* Added a getMenu method to the atkdropdownmenu. The method simply calls and
  return $this->load(). [Erik]